Bug 1424839 - Continue checking selections after a collapsed one r=mats

MozReview-Commit-ID: 4YXtx2bEprU

--HG--
extra : rebase_source : 3c94d78c9865d31f9c87e713b58922164ac6d805